welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:15: error: not found: value T
	for(i<- 0 to getMondeHauteur){ fairC(T(i))}
                                             ^